# membroker

./: Makefile.am  configure.ac  membroker.pc.in  membrokerserver.pc.in
src/: main.c  mb.h  mbclient.c  mbclient.h  mbcodec.c  mbctest.c  mbprivate.h  mbserver.c  mbserver.h  mbstatus.c  mbtest.c  mbutil.README  mbutil.c  membroker  membroker.service.in  membroker.socket  membroker.txt
src/tests/: main.c
